Bug 1440941 - FetchDriver should check if the operation has been already aborted when OnStartRequest is called, r=bkelly a=lizzard

--HG--
extra : source : 1bfc4dd20e017002e6d75a46ee2c0c88cba671e1